Updated files for Advanced Tutorial review

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,36 @@
 ################################################################################
 
 /out/ARM-Debug-2Beta1905/VSInheritEnvironments.txt
+/out/ARM-Debug-2Beta1905/rules.ninja
+/out/ARM-Debug-2Beta1905/cmake_install.cmake
+/out/ARM-Debug-2Beta1905/CMakeFiles/TargetDirectories.txt
+/out/ARM-Debug-2Beta1905/CMakeFiles/feature_tests.c
+/out/ARM-Debug-2Beta1905/CMakeFiles/feature_tests.bin
+/out/ARM-Debug-2Beta1905/CMakeFiles/CMakeOutput.log
+/out/ARM-Debug-2Beta1905/CMakeFiles/CMakeError.log
+/out/ARM-Debug-2Beta1905/CMakeFiles/cmake.check_cache
+/out/ARM-Debug-2Beta1905/CMakeFiles/3.12.18081601-MSVC_2/CompilerIdC/CMakeCCompilerId.o
+/out/ARM-Debug-2Beta1905/CMakeFiles/3.12.18081601-MSVC_2/CompilerIdC/CMakeCCompilerId.c
+/out/ARM-Debug-2Beta1905/CMakeFiles/3.12.18081601-MSVC_2/CompilerIdC
+/out/ARM-Debug-2Beta1905/CMakeFiles/3.12.18081601-MSVC_2/CMakeSystem.cmake
+/out/ARM-Debug-2Beta1905/CMakeFiles/3.12.18081601-MSVC_2/CMakeDetermineCompilerABI_C.bin
+/out/ARM-Debug-2Beta1905/CMakeFiles/3.12.18081601-MSVC_2/CMakeCCompiler.cmake
+/out/ARM-Debug-2Beta1905/CMakeFiles/3.12.18081601-MSVC_2
+/out/ARM-Debug-2Beta1905/CMakeFiles
+/out/ARM-Debug-2Beta1905/CMakeCache.txt
+/out/ARM-Debug-2Beta1905/build.ninja
+/out/ARM-Debug-2Beta1905
+/IntercoreCommsADC_RTApp_MT3620_BMetal/.vs/VSWorkspaceState.json
+/IntercoreCommsADC_RTApp_MT3620_BMetal/.vs/slnx.sqlite
+/IntercoreCommsADC_RTApp_MT3620_BMetal/.vs/ProjectSettings.json
+/IntercoreCommsADC_RTApp_MT3620_BMetal/.vs/IntercoreCommsADC_RTApp_MT3620_BMetal/v15/Browse.VC.db
+/IntercoreCommsADC_RTApp_MT3620_BMetal/.vs/IntercoreCommsADC_RTApp_MT3620_BMetal/v15/.suo
+/IntercoreCommsADC_RTApp_MT3620_BMetal/.vs/IntercoreCommsADC_RTApp_MT3620_BMetal/v15
+/IntercoreCommsADC_RTApp_MT3620_BMetal/.vs
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+/.vs/Azure_Sphere_SK_ADC_RTApp/v15/Browse.VC.db
+/.vs/Azure_Sphere_SK_ADC_RTApp/v15/.suo
+/.vs/Azure_Sphere_SK_ADC_RTApp/v15
+/.vs
