--- a/AvnetAzureSphereSK_OLED/AvnetStarterKitReferenceDesign/app_manifest.json
+++ b/AvnetAzureSphereSK_OLED/AvnetStarterKitReferenceDesign/app_manifest.json
@@ -2,14 +2,13 @@
   "SchemaVersion": 1,
   "Name": "Avnet-Starter-Kit-reference-V1.0",
   "ComponentId": "685f13af-25a5-40b2-8dd8-8cbc253ecbd8",
-  //"ComponentId": "25025d2c-66da-4448-bae1-ac26fcdd3627",
   "EntryPoint": "/bin/app",
   "CmdArgs": [ "Avnet-Starter-Kit-reference-V1.0" ],
   "Capabilities": {
-    //// ADC connection
-    "AllowedApplicationConnections": [ "005180BC-402F-4CB3-A662-72937DBCDE47" ],
-    //"AllowedConnections": [ "iotc-6da253ff-4991-4d1c-8ce5-b81616d70aa6.azure-devices.net" ],
-    "AllowedConnections": [ "iotc-0d18b636-6088-4bcb-b654-3f7758baf097.azure-devices.net" ],
+    //// M4 application connection (Replace the xxxx placeholder with your M4 application's ComponentID)
+    "AllowedApplicationConnections": [ "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx" ],
+    //// IoT Central application connection (Replace the xxxx placeholder with your IOTC application's ComponentID)
+    "AllowedConnections": [ "iotc-xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx.azure-devices.net" ],
     "AllowedTcpServerPorts": [],
     "AllowedUdpServerPorts": [],
     "Gpio": [ 0, 4, 5, 8, 9, 10, 12, 13, 34, 1 ],
