--- a/IntercoreCommsADC_RTApp_MT3620_BMetal/app_manifest.json
+++ b/IntercoreCommsADC_RTApp_MT3620_BMetal/app_manifest.json
@@ -4,8 +4,8 @@
   "ComponentId": "005180bc-402f-4cb3-a662-72937dbcde47",
   "EntryPoint": "/bin/app",
   "Capabilities": {
-    //"AllowedApplicationConnections": [ "25025d2c-66da-4448-bae1-ac26fcdd3627" ],
-    "AllowedApplicationConnections": [ "685f13af-25a5-40b2-8dd8-8cbc253ecbd8" ],
+    //// A7 application connection
+    "AllowedApplicationConnections": [ "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx" ],
     "Adc": [ "ADC0" ]
   },
   "ApplicationType": "RealTimeCapable"
