--- a/AvnetAzureSphereSK_OLED/AvnetStarterKitReferenceDesign/app_manifest.json
+++ b/AvnetAzureSphereSK_OLED/AvnetStarterKitReferenceDesign/app_manifest.json
@@ -5,9 +5,9 @@
   "EntryPoint": "/bin/app",
   "CmdArgs": [ "Avnet-Starter-Kit-reference-V1.0" ],
   "Capabilities": {
-    //// M4 application connection (Replace the xxxx placeholder with your M4 application's ComponentID)
-    "AllowedApplicationConnections": [ "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx" ],
-    //// IoT Central application connection (Replace the xxxx placeholder with your IOTC application's ComponentID)
+    //// M4 application connection (M4 application's ComponentID)
+    "AllowedApplicationConnections": [ "005180bc-402f-4cb3-a662-72937dbcde47" ],
+    //// IoT Central application connection (Replace xxxx placeholder with your IOTC application's ComponentID)
     "AllowedConnections": [ "iotc-xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx.azure-devices.net" ],
     "AllowedTcpServerPorts": [],
     "AllowedUdpServerPorts": [],
