Changes to support the 19.11 release

--- a/IntercoreCommsADC_RTApp_MT3620_BMetal/CMakeSettings.json
+++ b/IntercoreCommsADC_RTApp_MT3620_BMetal/CMakeSettings.json
@@ -2,9 +2,9 @@
   "environments": [
     {
       "environment": "AzureSphere",
-
-      "AzureSphereTargetApplicationRuntimeVersion": 2,
-      "AzureSphereTargetBetaApis": "Beta1905"
+      "AzureSphereTargetApiSet": "3+Beta1909",
+      "AzureSphereTargetApplicationRuntimeVersion": 3,
+      "AzureSphereTargetBetaApis": "Beta1909"
     }
   ],
   "configurations": [
